--- a/css/style.less
+++ b/css/style.less
@@ -1,8 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800);
+//@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800);
 
 
 body{
-  font-family: 'Open Sans', sans-serif;
   color: #525252;
   font-weight: 400;
 }
@@ -47,6 +46,9 @@ body{
   background-color: #3e937e;
   border-bottom: 3px solid #25574b;
   .navbar {
+    .nav {
+      padding-left: 0;
+    }
     .navbar-inner {
       box-shadow: none;
       background-color: #3e937e;
@@ -61,8 +63,8 @@ body{
       }
       .active a, a:hover {
           background-color: #25574b;
-   color: #FFFFFF;
-    text-shadow:none;
+          color: #FFFFFF;
+          text-shadow:none;
         }
     }
   }
@@ -71,11 +73,21 @@ body{
 /* FOOTER */
 #footer {
   margin-top: 100px;
-  padding: 40px 0 80px;
+  padding: 30px 0 20px;
   background: #25574b;
   color: #fff;
   font-weight: 300;
-  box-shadow: inset 0 6px 12px rgba(0, 0, 0, 0.125);
+  font-size: 12px;
+  a {
+    color: #5dad99;
+  }
+  .active a {
+    text-decoration: underline
+  }
+  .copy {
+    margin-top: 40px;
+    color: #3e937e;
+  }
 }
 
 
@@ -135,7 +147,3 @@ width: 550px;
 
 }
 
-
-a{
-  color:#3e937e;
-}
