--- a/css/style.less
+++ b/css/style.less
@@ -92,37 +92,32 @@ body{
 
 
 #home {
-  margin-top: -20px;
+
+  #stage{
+    height: 382px;
+    background-image: url(../assets/start.jpg);
+    ul {
+       font-style: italic;
+       font-size:18px;
+       font-weight: 600;
+       color:#3e937e;
+    }
+  }
+  #stageBanner{
+    position: relative;
+    top: 280px;
+    left: 230px;
+    
+    color: #FFFFFF;
+
+  }
 }
 
-
-.container{
-  
-  margin-right: auto;
-  margin-left: auto;
-}
 .page{
-  padding-top: 20px;
   min-height: 400px;
 
 }
 
-#stage{
-  margin-right: auto;
-  margin-left: auto;
-  width: 940px;
-  height: 382px;
-  background-image: url(../assets/start.jpg);
-
-}
-#stageBanner{
-  position: relative;
-  top: 280px;
-  left: 230px;
-  
-  color: #FFFFFF;
-
-}
 
 .mainbody{
   margin-top: 50px;
