--- a/css/bootstrap2/breadcrumbs.less
+++ b/css/bootstrap2/breadcrumbs.less
@@ -4,11 +4,13 @@
 
 
 .breadcrumb {
-  padding: 8px 15px;
-  margin: 0 0 @baseLineHeight;
+  font-size: 12px;
+  padding: 5px 15px;
+  margin: 0px 0 @baseLineHeight;
   list-style: none;
-  background-color: #f5f5f5;
-  .border-radius(@baseBorderRadius);
+  //background-color: #f5f5f5;
+  border-bottom: 1px solid #f5f5f5;
+  //.border-radius(@baseBorderRadius);
   > li {
     display: inline-block;
     .ie7-inline-block();
