--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -559,7 +559,7 @@ small {
   font-size: 85%;
 }
 strong {
-  font-weight: bold;
+  font-weight: 600;
 }
 em {
   font-style: italic;
@@ -1729,7 +1729,7 @@ table {
   border-top: 1px solid #dddddd;
 }
 .table th {
-  font-weight: bold;
+  font-weight: 600;
 }
 .table thead th {
   vertical-align: bottom;
