--- a/css/style.less
+++ b/css/style.less
@@ -118,7 +118,51 @@ body{
 
 }
 
+td.leftSide{
+width:80px;
+  
+}
+td.rightSide{
+padding-left:50px;
+  
+}
 
+#highestBid{
+background-color: #3e937e;
+color:#ffffff;
+
+font-size:18px;
+  
+}
 .mainbody{
-  margin-top: 50px;
+  margin-top: 20px;
+}
+
+#schedule{
+  margin-top:50px;
+  font-size:12px;
+}
+
+
+#main_data{
+
+   margin-top: 20px;
+
+}
+
+#time_box{
+  
+  font-size:16px;
+}
+
+#bid_box{
+  margin-top:50px;
+}
+
+#running_auction{
+
+
+
+
+
 }
