--- a/css/style.less
+++ b/css/style.less
@@ -111,6 +111,13 @@ body{
     color: #FFFFFF;
 
   }
+  #inner_stage{
+  margin: 100px 0 0 100px;
+  color:#ffff;
+  filter: alpha(opacity=90);
+  opacity: 0.9;
+
+  }
 }
 
 .page{
@@ -145,8 +152,32 @@ font-size:18px;
 
 
 #main_data{
+.emptyPigsRating{
+position:absolute;
+width:167px;
+height:20px;
+background-image: url(../assets/5pigs_empty.png);  
+background-size: 100%;
+}
+
+.fullPigsRating{
+position:absolute;
+width:167px;
+height:20px;
+background-image: url(../assets/5pigs.png);
+background-size: auto 100%;
+  
+}
+
+.amountOfRatings{
+margin-left:180px;
+  
+}
+}
+#main_data{
 
    margin-top: 20px;
+
 
 }
 
