--- a/css/style.css
+++ b/css/style.css
@@ -98,10 +98,14 @@ body {
   color: #FFFFFF;
 }
 #home #inner_stage {
-  margin: 100px 0 0 100px;
+  margin: 50px 0 0 100px;
   color: #ffff;
   filter: alpha(opacity=90);
   opacity: 0.9;
+}
+#home #inner_stage .no_transparancy {
+  filter: alpha(opacity=100);
+  opacity: 1.0;
 }
 .page {
   min-height: 400px;
@@ -127,19 +131,26 @@ td.rightSide {
   margin-top: 50px;
   font-size: 12px;
 }
-#main_data .emptyPigsRating {
+.emptyPigsRating {
   position: absolute;
   width: 167px;
   height: 20px;
   background-image: url(../assets/5pigs_empty.png);
   background-size: 100%;
 }
-#main_data .fullPigsRating {
+.fullPigsRating {
   position: absolute;
   width: 167px;
   height: 20px;
   background-image: url(../assets/5pigs.png);
   background-size: auto 100%;
+}
+.comment {
+  background-color: #ffffff;
+  margin-bottom: 10px;
+}
+.rating {
+  margin-bottom: 40px;
 }
 #main_data .amountOfRatings {
   margin-left: 180px;
@@ -152,4 +163,7 @@ td.rightSide {
 }
 #bid_box {
   margin-top: 50px;
+}
+label {
+  width: 150px;
 }
