--- a/css/style.less
+++ b/css/style.less
@@ -112,12 +112,18 @@ body{
 
   }
   #inner_stage{
-  margin: 100px 0 0 100px;
+  margin: 50px 0 0 100px;
   color:#ffff;
   filter: alpha(opacity=90);
   opacity: 0.9;
 
+.no_transparancy{
+    filter: alpha(opacity=100);
+  opacity: 1.0;
+}
   }
+
+
 }
 
 .page{
@@ -155,8 +161,6 @@ font-size:18px;
   font-size:12px;
 }
 
-
-#main_data{
 .emptyPigsRating{
 position:absolute;
 width:167px;
@@ -173,6 +177,20 @@ background-image: url(../assets/5pigs.png);
 background-size: auto 100%;
   
 }
+
+
+.comment{
+ background-color:#ffffff;
+margin-bottom: 10px;
+
+}
+.rating{
+  
+margin-bottom: 40px;
+
+}
+
+#main_data{
 
 .amountOfRatings{
 margin-left:180px;
@@ -195,10 +213,6 @@ margin-left:180px;
   margin-top:50px;
 }
 
-#running_auction{
-
-
-
-
-
+label{
+  width:150px;
 }
