--- a/css/style.less
+++ b/css/style.less
@@ -220,3 +220,18 @@ label{
 label.radio{
   width:300px;
 }
+
+#teasers{
+margin:20px 0;
+padding-left:20px;
+overflow:visible;
+width:960px;
+
+
+.teaser{
+float:left;
+margin-right:20px;
+height:150px;
+  
+}
+}
