--- a/css/style.css
+++ b/css/style.css
@@ -82,14 +82,20 @@ body {
   color: #3e937e;
 }
 #home #stage {
+  width: 940px;
   height: 382px;
+  overflow: hidden;
+  margin-top: 20px;
   background-image: url(../assets/start.jpg);
 }
 #home #stage ul {
   font-style: italic;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 600;
   color: #3e937e;
+}
+#home #stage h1 {
+  font-size: 28px;
 }
 #home #stageBanner {
   position: relative;
@@ -98,10 +104,8 @@ body {
   color: #FFFFFF;
 }
 #home #inner_stage {
-  margin: 50px 0 0 100px;
+  margin: 50px 0 0 420px;
   color: #ffff;
-  filter: alpha(opacity=90);
-  opacity: 0.9;
 }
 #home #inner_stage .no_transparancy {
   filter: alpha(opacity=100);
@@ -180,4 +184,20 @@ label.radio {
   float: left;
   margin-right: 20px;
   height: 150px;
+}
+#teasers .teaser_text {
+  position: absolute;
+  margin-top: -35px;
+  padding: 7px;
+  width: 290px;
+  text-align: right;
+  font-size: 18px;
+  height: 25px;
+  color: #ffffff;
+  background-color: #3e937e;
+}
+#teasers .teaser_text:hover {
+  background-color: #25574b;
+  height: 35px;
+  margin-top: -35px;
 }
