--- a/css/style.less
+++ b/css/style.less
@@ -94,13 +94,19 @@ body{
 #home {
 
   #stage{
+    width: 940px;
     height: 382px;
+    overflow:hidden;
+    margin-top:20px;
     background-image: url(../assets/start.jpg);
     ul {
        font-style: italic;
-       font-size:18px;
+       font-size:16px;
        font-weight: 600;
        color:#3e937e;
+    }
+    h1{
+   font-size:28px
     }
   }
   #stageBanner{
@@ -112,10 +118,9 @@ body{
 
   }
   #inner_stage{
-  margin: 50px 0 0 100px;
+  margin: 50px 0 0 420px;
   color:#ffff;
-  filter: alpha(opacity=90);
-  opacity: 0.9;
+
 
 .no_transparancy{
     filter: alpha(opacity=100);
@@ -234,4 +239,26 @@ margin-right:20px;
 height:150px;
   
 }
+
+.teaser_text{
+position:absolute;
+margin-top: -35px;
+padding:7px;
+width: 290px;
+text-align: right;
+font-size: 18px;
+height: 25px;
+color: #ffffff;
+background-color: #3e937e;
+
+
+}
+
+.teaser_text:hover{
+
+  background-color: #25574b;
+  height: 35px;
+  margin-top: -35px;
+  }
+
 }
