--- a/css/style.less
+++ b/css/style.less
@@ -151,7 +151,7 @@ padding-left:30px;
 }
 
 #highestBid{
-background-color: #3e937e;
+background-color: #525252;
 color:#ffffff;
 
 font-size:18px;
@@ -244,10 +244,10 @@ height:150px;
 position:absolute;
 margin-top: -35px;
 padding:7px;
-width: 290px;
+width: 286px;
 text-align: right;
 font-size: 18px;
-height: 25px;
+height: 22px;
 color: #ffffff;
 background-color: #3e937e;
 
@@ -257,8 +257,9 @@ background-color: #3e937e;
 .teaser_text:hover{
 
   background-color: #25574b;
-  height: 35px;
-  margin-top: -35px;
+  height: 30px;
+  margin-top: -43px;
+  font-size: 20px;
   }
 
 }
