--- a/css/style.less
+++ b/css/style.less
@@ -250,6 +250,8 @@ font-size: 18px;
 height: 22px;
 color: #ffffff;
 background-color: #3e937e;
+  
+  opacity: 0.9;
 
 
 }
@@ -260,6 +262,7 @@ background-color: #3e937e;
   height: 30px;
   margin-top: -43px;
   font-size: 20px;
+   opacity: 1.0;
   }
 
 }
