--- a/css/style.less
+++ b/css/style.less
@@ -151,12 +151,18 @@ padding-left:30px;
 }
 
 #highestBid{
-background-color: #525252;
-color:#ffffff;
 
+background-color: #F3F3F3;
+color: #000000;
 font-size:18px;
   
 }
+
+.ishighest{
+background-color: #525252;
+color:#ffffff;  
+}
+
 .mainbody{
   margin-top: 20px;
 }
