--- a/css/style.less
+++ b/css/style.less
@@ -141,6 +141,12 @@ width:80px;
   
 }
 
+td.leftLabel{
+width:150px;
+  
+}
+
+
 td.topSide{
   padding-top:30px;
 
@@ -154,7 +160,7 @@ padding-left:30px;
 
 background-color: #F3F3F3;
 color: #000000;
-font-size:18px;
+font-size:16px;
   
 }
 
@@ -270,5 +276,11 @@ background-color: #3e937e;
   font-size: 20px;
    opacity: 1.0;
   }
+
+}
+
+#formsModal .modal-body {
+
+max-height: 600px;
 
 }
